# cpack-exercise-wt2425

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
cmake/: CPackConfig.cmake
fem/: fem.cpp  fem.hpp
filesystem/: filesystem.cpp  filesystem.hpp
flatset/: flatset.cpp  flatset.hpp
yamlParser/: config.yml  yamlParser.cpp  yamlParser.hpp
